_EEX6335/parser.output
Grammar

    0 $accept: prog $end

    1 prog: classOrImplOrFunc_ZM

    2 classOrImplOrFunc_ZM: classOrImplOrFunc classOrImplOrFunc_ZM
    3                     | ε

    4 classOrImplOrFunc: classDecl
    5                  | implDef
    6                  | funcDef

    7 classDecl: CLASS ID isa_Id_ZO '{' visibility_memberDecl_ZM '}' ';'

    8 isa_Id_ZO: ISA ID commaID_ZM
    9          | ε

   10 commaID_ZM: ',' ID commaID_ZM
   11           | ε

   12 visibility_memberDecl_ZM: visibility memberDecl visibility_memberDecl_ZM
   13                         | ε

   14 implDef: IMPLEMENT ID '{' funcDef_ZM '}'

   15 funcDef_ZM: funcDef funcDef_ZM
   16           | ε

   17 funcDef: funcHead funcBody

   18 funcHead: FUNC ID '(' fParams ')' ARROW_OP returnType
   19         | CONSTRUCT '(' fParams ')'

   20 funcBody: '{' varDeclOrStmt_ZM '}'

   21 visibility: PUBLIC
   22           | PRIVATE

   23 memberDecl: funcDecl
   24           | attributeDecl

   25 funcDecl: funcHead ';'

   26 attributeDecl: ATTRIBUTE varDecl

   27 localVarDecl: LOCAL varDecl

   28 varDecl: ID ':' type arraySize_ZM ';'

   29 arraySize_ZM: arraySize arraySize_ZM
   30             | ε

   31 arraySize: '[' LITERAL_INTEGER ']'
   32          | '[' ']'

   33 varDeclOrStmt_ZM: varDeclOrStmt varDeclOrStmt_ZM
   34                 | ε

   35 varDeclOrStmt: localVarDecl
   36              | statement

   37 statement: matchedStmt
   38          | unmatchedStmt

   39 matchedStmt: variable assignOp expr ';'
   40            | functionCall ';'
   41            | IF '(' relExpr ')' THEN matchedStmt ELSE matchedStmt ';'
   42            | WHILE '(' relExpr ')' matchedStmt ';'
   43            | READ '(' variable ')' ';'
   44            | WRITE '(' expr ')' ';'
   45            | RETURN '(' expr ')' ';'
   46            | '{' statement_ZM '}'

   47 unmatchedStmt: IF '(' relExpr ')' THEN statement
   48              | IF '(' relExpr ')' THEN matchedStmt ELSE unmatchedStmt ';'
   49              | WHILE '(' relExpr ')' unmatchedStmt ';'

   50 statement_ZM: statement statement_ZM
   51             | ε

   52 expr: relExpr

   53 relExpr: arithExpr relOp arithExpr
   54        | arithExpr

   55 arithExpr: arithExpr addOp term
   56          | term

   57 term: term multOp factor
   58     | factor

   59 factor: variable
   60       | functionCall
   61       | LITERAL_INTEGER
   62       | LITERAL_FLOAT
   63       | '(' arithExpr ')'
   64       | NOT factor
   65       | '-' factor
   66       | '+' factor

   67 variable: primaryVar suffix_ZM

   68 primaryVar: idOrSelf

   69 idOrSelf: ID
   70         | SELF

   71 suffix_ZM: suffix suffix_ZM
   72          | indice_ZM

   73 suffix: indice_ZM '.' idOrSelf
   74       | '(' aParams ')' '.' idOrSelf

   75 indice_ZM: indice indice_ZM
   76          | ε

   77 indice: '[' arithExpr ']'

   78 functionCall: primaryVar '(' aParams ')'

   79 fParams: ID ':' type arraySize_ZM fParamsTail_ZM
   80        | ε

   81 fParamsTail_ZM: fParamsTail fParamsTail_ZM
   82               | ε

   83 fParamsTail: ',' ID ':' type arraySize_ZM

   84 aParams: expr aParamsTail_ZM
   85        | ε

   86 aParamsTail_ZM: aParamsTail aParamsTail_ZM
   87               | ε

   88 aParamsTail: ',' expr

   89 type: INTEGER
   90     | FLOAT
   91     | ID

   92 returnType: type
   93           | VOID

   94 assignOp: ASSIGN_OP

   95 relOp: EQ_OP
   96      | '<'
   97      | '>'
   98      | NE_OP
   99      | LE_OP
  100      | GE_OP

  101 addOp: '+'
  102      | '-'
  103      | OR

  104 multOp: '*'
  105       | '/'
  106       | AND


Terminals, with rules where they appear

    $end (0) 0
    '(' (40) 18 19 41 42 43 44 45 47 48 49 63 74 78
    ')' (41) 18 19 41 42 43 44 45 47 48 49 63 74 78
    '*' (42) 104
    '+' (43) 66 101
    ',' (44) 10 83 88
    '-' (45) 65 102
    '.' (46) 73 74
    '/' (47) 105
    ':' (58) 28 79 83
    ';' (59) 7 25 28 39 40 41 42 43 44 45 48 49
    '<' (60) 96
    '>' (62) 97
    '[' (91) 31 32 77
    ']' (93) 31 32 77
    '{' (123) 7 14 20 46
    '}' (125) 7 14 20 46
    error (256)
    CLASS (258) 7
    IMPLEMENT (259) 14
    FUNC (260) 18
    ATTRIBUTE (261) 26
    PUBLIC (262) 21
    PRIVATE (263) 22
    LOCAL (264) 27
    IF (265) 41 47 48
    THEN (266) 41 47 48
    ELSE (267) 41 48
    WHILE (268) 42 49
    READ (269) 43
    WRITE (270) 44
    RETURN (271) 45
    ISA (272) 8
    INTEGER (273) 89
    FLOAT (274) 90
    VOID (275) 93
    SELF (276) 70
    CONSTRUCT (277) 19
    ID (278) 7 8 10 14 18 28 69 79 83 91
    LITERAL_INTEGER (279) 31 61
    LITERAL_FLOAT (280) 62
    OR (281) 103
    AND (282) 106
    NOT (283) 64
    ARROW_OP (284) 18
    ASSIGN_OP (285) 94
    EQ_OP (286) 95
    NE_OP (287) 98
    LE_OP (288) 99
    GE_OP (289) 100
    UMINUS (290)


Nonterminals, with rules where they appear

    $accept (52)
        on left: 0
    prog (53)
        on left: 1
        on right: 0
    classOrImplOrFunc_ZM (54)
        on left: 2 3
        on right: 1 2
    classOrImplOrFunc (55)
        on left: 4 5 6
        on right: 2
    classDecl (56)
        on left: 7
        on right: 4
    isa_Id_ZO (57)
        on left: 8 9
        on right: 7
    commaID_ZM (58)
        on left: 10 11
        on right: 8 10
    visibility_memberDecl_ZM (59)
        on left: 12 13
        on right: 7 12
    implDef (60)
        on left: 14
        on right: 5
    funcDef_ZM (61)
        on left: 15 16
        on right: 14 15
    funcDef (62)
        on left: 17
        on right: 6 15
    funcHead (63)
        on left: 18 19
        on right: 17 25
    funcBody (64)
        on left: 20
        on right: 17
    visibility (65)
        on left: 21 22
        on right: 12
    memberDecl (66)
        on left: 23 24
        on right: 12
    funcDecl (67)
        on left: 25
        on right: 23
    attributeDecl (68)
        on left: 26
        on right: 24
    localVarDecl (69)
        on left: 27
        on right: 35
    varDecl (70)
        on left: 28
        on right: 26 27
    arraySize_ZM (71)
        on left: 29 30
        on right: 28 29 79 83
    arraySize (72)
        on left: 31 32
        on right: 29
    varDeclOrStmt_ZM (73)
        on left: 33 34
        on right: 20 33
    varDeclOrStmt (74)
        on left: 35 36
        on right: 33
    statement (75)
        on left: 37 38
        on right: 36 47 50
    matchedStmt (76)
        on left: 39 40 41 42 43 44 45 46
        on right: 37 41 42 48
    unmatchedStmt (77)
        on left: 47 48 49
        on right: 38 48 49
    statement_ZM (78)
        on left: 50 51
        on right: 46 50
    expr (79)
        on left: 52
        on right: 39 44 45 84 88
    relExpr (80)
        on left: 53 54
        on right: 41 42 47 48 49 52
    arithExpr (81)
        on left: 55 56
        on right: 53 54 55 63 77
    term (82)
        on left: 57 58
        on right: 55 56 57
    factor (83)
        on left: 59 60 61 62 63 64 65 66
        on right: 57 58 64 65 66
    variable (84)
        on left: 67
        on right: 39 43 59
    primaryVar (85)
        on left: 68
        on right: 67 78
    idOrSelf (86)
        on left: 69 70
        on right: 68 73 74
    suffix_ZM (87)
        on left: 71 72
        on right: 67 71
    suffix (88)
        on left: 73 74
        on right: 71
    indice_ZM (89)
        on left: 75 76
        on right: 72 73 75
    indice (90)
        on left: 77
        on right: 75
    functionCall (91)
        on left: 78
        on right: 40 60
    fParams (92)
        on left: 79 80
        on right: 18 19
    fParamsTail_ZM (93)
        on left: 81 82
        on right: 79 81
    fParamsTail (94)
        on left: 83
        on right: 81
    aParams (95)
        on left: 84 85
        on right: 74 78
    aParamsTail_ZM (96)
        on left: 86 87
        on right: 84 86
    aParamsTail (97)
        on left: 88
        on right: 86
    type (98)
        on left: 89 90 91
        on right: 28 79 83 92
    returnType (99)
        on left: 92 93
        on right: 18
    assignOp (100)
        on left: 94
        on right: 39
    relOp (101)
        on left: 95 96 97 98 99 100
        on right: 53
    addOp (102)
        on left: 101 102 103
        on right: 55
    multOp (103)
        on left: 104 105 106
        on right: 57


State 0

    0 $accept: • prog $end

    CLASS      shift, and go to state 1
    IMPLEMENT  shift, and go to state 2
    FUNC       shift, and go to state 3
    CONSTRUCT  shift, and go to state 4

    $default  reduce using rule 3 (classOrImplOrFunc_ZM)

    prog                  go to state 5
    classOrImplOrFunc_ZM  go to state 6
    classOrImplOrFunc     go to state 7
    classDecl             go to state 8
    implDef               go to state 9
    funcDef               go to state 10
    funcHead              go to state 11


State 1

    7 classDecl: CLASS • ID isa_Id_ZO '{' visibility_memberDecl_ZM '}' ';'

    ID  shift, and go to state 12


State 2

   14 implDef: IMPLEMENT • ID '{' funcDef_ZM '}'

    ID  shift, and go to state 13


State 3

   18 funcHead: FUNC • ID '(' fParams ')' ARROW_OP returnType

    ID  shift, and go to state 14


State 4

   19 funcHead: CONSTRUCT • '(' fParams ')'

    '('  shift, and go to state 15


State 5

    0 $accept: prog • $end

    $end  shift, and go to state 16


State 6

    1 prog: classOrImplOrFunc_ZM •

    $default  reduce using rule 1 (prog)


State 7

    2 classOrImplOrFunc_ZM: classOrImplOrFunc • classOrImplOrFunc_ZM

    CLASS      shift, and go to state 1
    IMPLEMENT  shift, and go to state 2
    FUNC       shift, and go to state 3
    CONSTRUCT  shift, and go to state 4

    $default  reduce using rule 3 (classOrImplOrFunc_ZM)

    classOrImplOrFunc_ZM  go to state 17
    classOrImplOrFunc     go to state 7
    classDecl             go to state 8
    implDef               go to state 9
    funcDef               go to state 10
    funcHead              go to state 11


State 8

    4 classOrImplOrFunc: classDecl •

    $default  reduce using rule 4 (classOrImplOrFunc)


State 9

    5 classOrImplOrFunc: implDef •

    $default  reduce using rule 5 (classOrImplOrFunc)


State 10

    6 classOrImplOrFunc: funcDef •

    $default  reduce using rule 6 (classOrImplOrFunc)


State 11

   17 funcDef: funcHead • funcBody

    '{'  shift, and go to state 18

    funcBody  go to state 19


State 12

    7 classDecl: CLASS ID • isa_Id_ZO '{' visibility_memberDecl_ZM '}' ';'

    ISA  shift, and go to state 20

    $default  reduce using rule 9 (isa_Id_ZO)

    isa_Id_ZO  go to state 21


State 13

   14 implDef: IMPLEMENT ID • '{' funcDef_ZM '}'

    '{'  shift, and go to state 22


State 14

   18 funcHead: FUNC ID • '(' fParams ')' ARROW_OP returnType

    '('  shift, and go to state 23


State 15

   19 funcHead: CONSTRUCT '(' • fParams ')'

    ID  shift, and go to state 24

    $default  reduce using rule 80 (fParams)

    fParams  go to state 25


State 16

    0 $accept: prog $end •

    $default  accept


State 17

    2 classOrImplOrFunc_ZM: classOrImplOrFunc classOrImplOrFunc_ZM •

    $default  reduce using rule 2 (classOrImplOrFunc_ZM)


State 18

   20 funcBody: '{' • varDeclOrStmt_ZM '}'

    LOCAL   shift, and go to state 26
    IF      shift, and go to state 27
    WHILE   shift, and go to state 28
    READ    shift, and go to state 29
    WRITE   shift, and go to state 30
    RETURN  shift, and go to state 31
    SELF    shift, and go to state 32
    ID      shift, and go to state 33
    '{'     shift, and go to state 34

    $default  reduce using rule 34 (varDeclOrStmt_ZM)

    localVarDecl      go to state 35
    varDeclOrStmt_ZM  go to state 36
    varDeclOrStmt     go to state 37
    statement         go to state 38
    matchedStmt       go to state 39
    unmatchedStmt     go to state 40
    variable          go to state 41
    primaryVar        go to state 42
    idOrSelf          go to state 43
    functionCall      go to state 44


State 19

   17 funcDef: funcHead funcBody •

    $default  reduce using rule 17 (funcDef)


State 20

    8 isa_Id_ZO: ISA • ID commaID_ZM

    ID  shift, and go to state 45


State 21

    7 classDecl: CLASS ID isa_Id_ZO • '{' visibility_memberDecl_ZM '}' ';'

    '{'  shift, and go to state 46


State 22

   14 implDef: IMPLEMENT ID '{' • funcDef_ZM '}'

    FUNC       shift, and go to state 3
    CONSTRUCT  shift, and go to state 4

    $default  reduce using rule 16 (funcDef_ZM)

    funcDef_ZM  go to state 47
    funcDef     go to state 48
    funcHead    go to state 11


State 23

   18 funcHead: FUNC ID '(' • fParams ')' ARROW_OP returnType

    ID  shift, and go to state 24

    $default  reduce using rule 80 (fParams)

    fParams  go to state 49


State 24

   79 fParams: ID • ':' type arraySize_ZM fParamsTail_ZM

    ':'  shift, and go to state 50


State 25

   19 funcHead: CONSTRUCT '(' fParams • ')'

    ')'  shift, and go to state 51


State 26

   27 localVarDecl: LOCAL • varDecl

    ID  shift, and go to state 52

    varDecl  go to state 53


State 27

   41 matchedStmt: IF • '(' relExpr ')' THEN matchedStmt ELSE matchedStmt ';'
   47 unmatchedStmt: IF • '(' relExpr ')' THEN statement
   48              | IF • '(' relExpr ')' THEN matchedStmt ELSE unmatchedStmt ';'

    '('  shift, and go to state 54


State 28

   42 matchedStmt: WHILE • '(' relExpr ')' matchedStmt ';'
   49 unmatchedStmt: WHILE • '(' relExpr ')' unmatchedStmt ';'

    '('  shift, and go to state 55


State 29

   43 matchedStmt: READ • '(' variable ')' ';'

    '('  shift, and go to state 56


State 30

   44 matchedStmt: WRITE • '(' expr ')' ';'

    '('  shift, and go to state 57


State 31

   45 matchedStmt: RETURN • '(' expr ')' ';'

    '('  shift, and go to state 58


State 32

   70 idOrSelf: SELF •

    $default  reduce using rule 70 (idOrSelf)


State 33

   69 idOrSelf: ID •

    $default  reduce using rule 69 (idOrSelf)


State 34

   46 matchedStmt: '{' • statement_ZM '}'

    IF      shift, and go to state 27
    WHILE   shift, and go to state 28
    READ    shift, and go to state 29
    WRITE   shift, and go to state 30
    RETURN  shift, and go to state 31
    SELF    shift, and go to state 32
    ID      shift, and go to state 33
    '{'     shift, and go to state 34

    $default  reduce using rule 51 (statement_ZM)

    statement      go to state 59
    matchedStmt    go to state 39
    unmatchedStmt  go to state 40
    statement_ZM   go to state 60
    variable       go to state 41
    primaryVar     go to state 42
    idOrSelf       go to state 43
    functionCall   go to state 44


State 35

   35 varDeclOrStmt: localVarDecl •

    $default  reduce using rule 35 (varDeclOrStmt)


State 36

   20 funcBody: '{' varDeclOrStmt_ZM • '}'

    '}'  shift, and go to state 61


State 37

   33 varDeclOrStmt_ZM: varDeclOrStmt • varDeclOrStmt_ZM

    LOCAL   shift, and go to state 26
    IF      shift, and go to state 27
    WHILE   shift, and go to state 28
    READ    shift, and go to state 29
    WRITE   shift, and go to state 30
    RETURN  shift, and go to state 31
    SELF    shift, and go to state 32
    ID      shift, and go to state 33
    '{'     shift, and go to state 34

    $default  reduce using rule 34 (varDeclOrStmt_ZM)

    localVarDecl      go to state 35
    varDeclOrStmt_ZM  go to state 62
    varDeclOrStmt     go to state 37
    statement         go to state 38
    matchedStmt       go to state 39
    unmatchedStmt     go to state 40
    variable          go to state 41
    primaryVar        go to state 42
    idOrSelf          go to state 43
    functionCall      go to state 44


State 38

   36 varDeclOrStmt: statement •

    $default  reduce using rule 36 (varDeclOrStmt)


State 39

   37 statement: matchedStmt •

    $default  reduce using rule 37 (statement)


State 40

   38 statement: unmatchedStmt •

    $default  reduce using rule 38 (statement)


State 41

   39 matchedStmt: variable • assignOp expr ';'

    ASSIGN_OP  shift, and go to state 63

    assignOp  go to state 64


State 42

   67 variable: primaryVar • suffix_ZM
   78 functionCall: primaryVar • '(' aParams ')'

    '('  shift, and go to state 65
    '['  shift, and go to state 66

    $default  reduce using rule 76 (indice_ZM)

    suffix_ZM  go to state 67
    suffix     go to state 68
    indice_ZM  go to state 69
    indice     go to state 70


State 43

   68 primaryVar: idOrSelf •

    $default  reduce using rule 68 (primaryVar)


State 44

   40 matchedStmt: functionCall • ';'

    ';'  shift, and go to state 71


State 45

    8 isa_Id_ZO: ISA ID • commaID_ZM

    ','  shift, and go to state 72

    $default  reduce using rule 11 (commaID_ZM)

    commaID_ZM  go to state 73


State 46
